Bug 1084019 - Make the "name" property of function objects configurable. r=jorendorff

--HG--
rename : js/src/tests/ecma_5/strict/function-name.js => js/src/tests/ecma_6/Function/function-name.js
extra : rebase_source : af1d50fd561aa3e7d7c77bc273ab3449f2056682